# android-ui-credit-card-bill-info

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/card_bill_collector/: __init__.py  custom_device.py  exceptions.py  types.py  utils.py
src/card_bill_collector/console_scripts/: load_expenses.py  main.py
